Added gradle task for running langforge-app in debug mode with all plugins loaded.